# Simple-Calculator-In-Rust

./: Cargo.toml  README.md
src/: main.rs
