[package]
authors = ["Retroboi64"]
license = "MIT"
description = "A simple but fast calculator"
readme = "README.md"
homepage = "https://github.com/Retroboi64/Simple-Calculator-In-Rust"
repository = "https://github.com/Retroboi64/Simple-Calculator-In-Rust"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]
name = "simple_calculator"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
owo-colors = "4.1.0"
